@@ -17,6 +17,9 @@ PHP                                                                        NEWS
     (cmb)
   . Fixed bug #68471 (IntlDateFormatter fails for "GMT+00:00" timezone). (cmb)
 
+- OpenSSL:
+  . Fixed bug #52093 (openssl_csr_sign truncates $serial). (cmb)
+
 - PCRE:
   . Fixed bug #81101 (PCRE2 10.37 shows unexpected result). (Anatol)
 
